other-vpol/block-updates-deletes/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: block-updates-deletes-ns
