other-vpol/block-updates-deletes/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: block-updates-deletes
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - reason: Succeeded
      status: "True"
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
