other-vpol/block-updates-deletes/.chainsaw-test/svc-good-update.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  namespace: block-updates-deletes-ns
  name: svc01
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: ClusterIP
