other-vpol/block-updates-deletes/.chainsaw-test/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: busybox
  namespace: block-updates-deletes-ns
  name: svc01
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: busybox
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: busybox
    protected: "true"
  name: svc02
  namespace: block-updates-deletes-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: busybox
  type: ClusterIP
